--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           name="submit"
           value="Create New Toy"
           class="submit"
+          id = "abc"
         />
       </form>
     </div>
